# Microservices-Based-Instant-Messaging-System

./: .gitignore  README.md  install_packs.sh
code/: Dockerfile
code/server/: CMakeLists.txt  depends.sh  docker-compose.yml  entrypoint.sh
code/server/common/: asr.hpp  channel.hpp  data_es.hpp  data_redis.hpp  dms.hpp  elastic.hpp  etcd.hpp  icsearch.hpp  logger.hpp  mysql.hpp  mysql_apply.hpp  mysql_chat_session.hpp  mysql_chat_session_member.hpp  mysql_message.hpp  mysql_relation.hpp  mysql_user.hpp  rabbitmq.hpp  rpc_registry.hpp  utils.hpp
code/server/file/: CMakeLists.txt  dockerfile
code/server/file/source/: file_server.cc  file_server.hpp
code/server/file/test/: file_client.cc
code/server/friend/: CMakeLists.txt  dockerfile
code/server/friend/source/: friend_server.cc  friend_server.hpp
code/server/friend/test/: friend_client.cc
code/server/friend/test/mysql_test/: makefile  test.cc
code/server/gateway/: CMakeLists.txt  dockerfile
code/server/gateway/source/: connection.hpp  gateway_server.cc  gateway_server.hpp
code/server/include/aip-cpp-sdk/: ocr.h
code/server/include/aip-cpp-sdk/base/: http.h
code/server/message/: CMakeLists.txt  dockerfile
code/server/message/source/: message_server.cc  message_server.hpp
code/server/message/test/: message_client.cc
code/server/message/test/es_test/: main.cc
code/server/message/test/mysql_test/: Makefile  main.cc  message-odb.cxx  message-odb.hxx  message-odb.ixx  message.sql
code/server/odb/: apply.hxx  chat_session.hxx  chat_session_member.hxx  message.hxx  relation.hxx  user.hxx
code/server/proto/: base.proto  file.proto  friend.proto  gateway.proto  message.proto  notify.proto  speech.proto  transmit.proto  user.proto
code/server/speech/: CMakeLists.txt  dockerfile
code/server/speech/aip-cpp-sdk-4.16.7/: content_censor.h  nlp.h
code/server/speech/aip-cpp-sdk-4.16.7/base/: base.h
code/server/speech/source/: speech_server.cc  speech_server.hpp
code/server/speech/test/: speech_client.cc
code/server/sql/: chat_session.sql  chat_session_member.sql  friend_apply.sql  message.sql  relation.sql  user.sql
code/server/third/include/: httplib.h
code/server/third/include/aip-cpp-sdk/: README.md  body_analysis.h  content_censor.h  face.h  image_censor.h  image_classify.h  image_process.h  image_search.h  kg.h  machine_translation.h  nlp.h  ocr.h  speech.h  video_censor.h  voice_censor.h
code/server/third/include/aip-cpp-sdk/base/: base.h  base64.h  http.h  utils.h
code/server/transmit/: CMakeLists.txt  dockerfile
code/server/transmit/source/: transmit_server.cc  transmit_server.hpp
code/server/transmit/test/: transmit_client.cc  user_client.cc
code/server/transmit/test/mysql_test/: chat_session_member-odb.cxx  chat_session_member-odb.hxx  chat_session_member-odb.ixx  chat_session_member.sql
code/server/user/: CMakeLists.txt  dockerfile
code/server/user/source/: user_server.cc  user_server.hpp
code/server/user/test/: test  test.cc  user-odb.hxx  user-odb.ixx  user.sql  user_client.cc
code/server/user/test/es_test/: Makefile  main.cc
code/server/user/test/mysql_test/: Makefile  main.cc  user.sql
code/server/user/test/redis_test/: Makefile  main.cc
common/: channel.hpp  elastic.hpp  etcd.hpp  logger.hpp
elasticsearch_test/: makefile
etcd_test/: get  put
example/: discovery  discovery.cc  main.pb.h  makefile  registery.cc  registry  test  test.cc
example/rabbitmq/: consume.cc  makefile  publish.cc
example/rpc/: main.pb.cc  registery.cc
gflags_test/: main  main.cc  makefile
gtest_test/: main
odb_test/: student-odb.hxx  student-odb.ixx  student.hxx  student.sql
rabbit_mq_test/: makefile
redis_test/: main.cc
rpc_test/: main.proto
spdlog_test/: logger.hpp  main.cc  makefile
test/dms_test/: main.cc  makefile  test.cc
test/elasticsearch_test/: main.cc  makefile  test.cc
test/es_test/: main.cc  makefile
test/etcd_test/: etcd.hpp  get.cc  makefile  put.cc
test/gflags_test/: main.cc  main.conf
test/gtest_test/: main.cc  makefile
test/httplib_test/: main.cc
test/jsoncpp_test/: main.cc  makefile
test/mysql_test/: main.cc  makefile  user-odb.cxx  user.sql
test/odb_test/: main.cc  makefile  student-odb.cxx  student.sql
test/rabbit_mq_test/: consume.cc  publish.cc
test/redis_test/: main.cc  makefile
test/rpc_test/: client.cc  makefile  server.cc
test/spdlog_test/: logger.hpp  main.conf  makefile
test/speech_test/: main.cc  makefile  test  test.cc
test/websocketpp_test/: makefile
websocketpp_test/: main.cc
